2003-03-10  Pavel Roskin  <proski@gnu.org>

	* key.c (get_modifier) [__QNXNTO__]: Remove incorrect check for
	the existance of libph.so.1.

2003-03-10  Dmitry Alexeyev  <dmi_a@qnx.org.ru>

	* key.c (get_modifier): Add support for QNX Photon pterm.

2003-03-10  Pavel Roskin  <proski@gnu.org>

	* utilunix.c (canonicalize_pathname): Clean rewrite from
	scratch.  The old implementation had memory problems with "/.."
	and didn't actually strip the leading "./" from path.  Remove
	support for obsolete Qnet paths.

2003-03-05  Pavel Roskin  <proski@gnu.org>

	* subshell.c (init_subshell_child): Set environment variable
	MC_SID to the session number of the subshell.
	(check_sid): Check that we are not running mc already in the
	same session.
	* main.c (main): Don't run do_nc() if shutdown was requested.

2003-03-05  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* cons.handler.c (set_attr) [__FreeBSD__]: Eliminate cmd array.

2003-03-05  Max Khon  <fjoe@iclub.nsu.ru>

	* cons.handler.c (console_init) [__FreeBSD__]: Fix the amount of
	allocated memory.
	(console_save) [__FreeBSD__]: Doesn't exit on error, just return.

2003-03-05  Pavel Roskin  <proski@gnu.org>

	* cons.handler.c (show_console_contents_freebsd): Rewrite
	to use screen library (S-Lang or ncurses).  Direct output is
	unreliable when the screen library is active.

2003-03-03  Pavel Roskin  <proski@gnu.org>

	* profile.c (load): Fix reading keys immediately after comments.

2003-02-26  Pavel Roskin  <proski@gnu.org>

	* cons.handler.c: Put checks for rxvt extensions in one place.
	Simplify FreeBSD code.

2003-02-26  Max Khon  <fjoe@iclub.nsu.ru>

	* cons.handler.c: Add implementation for FreeBSD 4.x and 5.x.

2003-02-26  Pavel Roskin  <proski@gnu.org>

	* view.c (load_view_file): Make sure view->s.st_size is not
	truncated when passed to g_malloc().
	Reported by Philipp Thomas <pthomas@suse.de>

2003-02-23  Dmitry Alexeyev  <dmi_a@qnx.org.ru>

	* key.c (get_modifier): Add support for QNX Neutrino console.
