@@ -35,10 +35,7 @@
  */
 static const long cooledit_key_map[] = {
     KEY_BACKSPACE, CK_BackSpace,
-    0177, CK_BackSpace,
-    XCTRL ('h'), CK_BackSpace,
     KEY_DC, CK_Delete,
-    XCTRL ('d'), CK_Delete,
     '\n', CK_Enter,
     KEY_PPAGE, CK_Page_Up,
     KEY_NPAGE, CK_Page_Down,
@@ -90,10 +87,7 @@ static const long cooledit_key_map[] = {
 
 static long const emacs_key_map[] = {
     KEY_BACKSPACE, CK_BackSpace,
-    0177, CK_BackSpace,
-    XCTRL ('h'), CK_BackSpace,
     KEY_DC, CK_Delete,
-    XCTRL ('d'), CK_Delete,
     '\n', CK_Enter,
     KEY_PPAGE, CK_Page_Up,
     KEY_NPAGE, CK_Page_Down,
@@ -180,7 +174,6 @@ static long const common_key_map[] = {
     KEY_M_CTRL | (KEY_F (4)), CK_Replace_Again,
     KEY_M_CTRL | (KEY_F (7)), CK_Find_Again,
     KEY_M_CTRL | KEY_BACKSPACE, CK_Undo,
-    KEY_M_CTRL | 0177, CK_Undo,
     KEY_M_CTRL | KEY_PPAGE, CK_Beginning_Of_Text,
     KEY_M_CTRL | KEY_NPAGE, CK_End_Of_Text,
     KEY_M_CTRL | KEY_HOME, CK_Beginning_Of_Text,
@@ -194,7 +187,6 @@ static long const common_key_map[] = {
 
     /* Alt */
     KEY_M_ALT | KEY_BACKSPACE, CK_Delete_Word_Left,
-    KEY_M_ALT | 0177, CK_Delete_Word_Left,
 
     0, 0
 };
